--- a/.github/workflows/debricked.yml
+++ b/.github/workflows/debricked.yml
@@ -7,8 +7,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: debricked/actions@v3
+      - name: Run Debricked Scan
+        run: |
+          debricked files find
+          debricked scan
         env:
           DEBRICKED_TOKEN: ${{ secrets.DEBRICKED_TOKEN }}
 
