--- a/.github/workflows/debricked.yml
+++ b/.github/workflows/debricked.yml
@@ -23,11 +23,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      - name: Install Debricked CLI
-        run: |
-          curl -L https://github.com/debricked/cli/releases/latest/download/cli_linux_x86_64.tar.gz | tar -xz debricked
-          ./debricked --version
         
       # Here we run the Debricked CLI, where you have multiple options to configure your scan. 
       # The CLI repo can be found here: https://github.com/debricked/cli
@@ -42,6 +37,6 @@ jobs:
       # The base "debricked scan" does all this with sane default values.
       - name: Run Scan
         run: |
-          ./debricked scan
+          debricked scan
         env:
           DEBRICKED_TOKEN: ${{ secrets.DEBRICKED_TOKEN }}
