--- a/.github/workflows/debricked.yml
+++ b/.github/workflows/debricked.yml
@@ -55,5 +55,5 @@ jobs:
         run: |
           debricked scan
         env:
-          DEBRICKED_TOKEN: ${{ secrets.DEBRICKED_TOKEN_REVIEW }}
+          DEBRICKED_TOKEN: ${{ secrets.DEBRICKED_TOKEN_STAGING }}
           DEBRICKED_URI: 'https://review-5832-overv-zu221v.review.debricked.dev'
